--- a/app/src/main/res/layout/recyclerview_items.xml
+++ b/app/src/main/res/layout/recyclerview_items.xml
@@ -6,7 +6,14 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        />
+
+    <TextView
+        android:id="@+id/height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
