Fixade småfel i förebyggande syfte inför nästa test av applikationen

--- a/app/src/main/res/layout/recyclerview_items.xml
+++ b/app/src/main/res/layout/recyclerview_items.xml
@@ -13,7 +13,7 @@
         />
 
     <TextView
-        android:id="@+id/height"
+        android:id="@+id/size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
